maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:24: error: value ! is not a member of Boolean
		if (x > 0 !aMurOuest(x,y) && v!=9999 && getIndication(x-1,y)>=v && getIndication(x-1,y)<9999) {
                          ^